--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- <link rel="icon" href="https://g.alicdn.com/mm/mm-brand/0.1.0/ico/favicon.ico"> -->
-  <link rel="icon" href="/src/assets/common/favicon.ico">
+  <link rel="icon" href="../src/assets/common/favicon.ico">
   <title>阿里妈妈</title>
 </head>
 
